typo; copy change; gutters on mobile

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -81,7 +81,7 @@ import ColorBox from '../components/ColorBox.astro';
             --fontsize: 1.1rem;
         } 
         .gutter {
-            display: none;
+            min-width: 0.5rem
         }
     }
 </style>
