--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,8 @@ import Layout from '../layouts/Layout.astro';
                 <br>
                 <p>
                     Currently, I'm working on a new project in the quant trading space.
-                    Before that, I founded and led a quantitative hedge fund,
-                    and worked at worked at a large US market maker, a
+                    Before that, I founded and led a quantitative hedge fund.
+                    Previously, I had worked at a large US market maker, a
                     pre-seed fintech startup, and an investment bank.
                 </p>
             </div>
