--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,17 +16,15 @@ import Layout from '../layouts/Layout.astro';
                 </p>
                 <br>
                 <p>
-                    I have (some) skills in quantitative trading, 
-                    software engineering, and company-building,
-                    although I'm more of a generalist than I sometimes
-                    like to admit.
+                    I have (some) skills in quantitative research / trading, 
+                    software engineering, and company-building.
                 </p>
                 <br>
                 <p>
                     Currently, I'm working on a new project in the quant trading space.
-                    Before that, I founded and led a quantitative hedge fund.
-                    Previously, I had worked at a large US market maker, a
-                    pre-seed fintech startup, and an investment bank.
+                    Before that, I founded and led a quantitative hedge fund, and worked
+                    at Jane Street, a 
+                    large US market maker.
                 </p>
             </div>
         </div>
